# OpenGLShader

./: CMakeLists.txt  README.md
ShadersSourceFiles/: FirstStep.fs  FirstStep.vs
ShadersSourceFiles/TextureStuff/: ManyTextures.fs
Src/: main.cpp
Src/ShaderClass/: ShaderClass.cpp  ShaderClass.h
